--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -8,18 +8,35 @@
         
         "refresh": "Atualizar",
         "loading": "Carregando...",
+        "saving_label": "Salvando...",
+        "creating_label": "Criando...",
         "name_label": "Nome",
         "email_label": "Email",
         "role_label": "Papel",
         "select_placeholder": "Selecione uma opção",
         "delete_label": "Excluir",
+        "password_label": "Senha",
+        "cancel_label": "Cancelar",
 
         "filter_reset_label": "Resetar filtro",
         "filter_label": "Filtrar",
 
         "action_dropdown_label": "Ações",
-        "action_dropdown_trigger_label": "Abrir menu"
+        "action_dropdown_trigger_label": "Abrir menu",
+
+        "alert_cancel_button_label": "Não, obrigado",
+        "alert_confirm_button_label": "Continuar",
+
+        "dialog_save_button_label": "Salvar alterações"
     },
+
+    "formik": {
+        "errors": {
+            "required": "Este campo é obrigatório",
+            "email": "Informe um email válido"
+        }
+    },
+
     "Home": {
         "title": "Bem vindo",
         "description": "Este projeto é uma aplicação completa para ajudar desenvolvedores a começar seus projetos rapidamento. Aproveite e boa sorte :)"
@@ -42,7 +59,20 @@
             "role_admin_label": "Admin",
             "role_client_label": "Cliente",
 
-            "filter_submit_label": "Buscar usuário"
+            "filter_submit_label": "Buscar usuário",
+
+            "alert_delete_title": "Você tem certeza disso?",
+            "alert_delete_description": "Esta ação não pode ser desfeita. Irá excluir o usuário de nossos servidores.",
+
+            "dialog_edit_title": "Editar usuário",
+            "dialog_create_title": "Criar usuário"
         }
+    },
+
+    "Account": {
+        "dropdown_title": "Minha conta",
+
+        "sign_out_button_label": "Sair",
+        "sign_in_button_label": "Entrar"
     }
 }
